@@ -9,11 +9,11 @@ dependencies {
 
     testImplementation(libs.jackson.dataformat.xml)
     testImplementation(libs.jackson.module.kotlin)
-    testImplementation("com.fasterxml.woodstox:woodstox-core:6.5.1")
+    testImplementation(libs.woodstox.core)
     testApi(platform(libs.junit.bom))
     testImplementation(libs.junit4)
 
-    testImplementation("org.eclipse.jgit:org.eclipse.jgit:5.13.0.202109080827-r")
+    testImplementation(libs.jgit)
 }
 
 sourceSets {
@@ -23,9 +23,11 @@ sourceSets {
     }
 }
 
-projectTest() {
+projectTest {
     dependsOn(":dist")
     workingDir = rootDir
+    javaLauncher.set(getToolchainLauncherFor(JdkMajorVersion.JDK_17_0))
+    jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
 }
 
 testsJar()
